# Hermes-A365

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  SPEC.md  pyproject.toml
docs/historical/: SPEC-v0.1-draft.md
docs/submissions/: microsoft-agent365-devtools-issue.md  nousresearch-hermes-agent-issue.md
plugins/agent365/: README.md  __init__.py  adapter.py  cli.py  plugin.yaml
references/: README.md  a365-cli-reference.md  activity-protocol-shapes.md  error-codes.md  license-cost-table.md  live-tenant-test.md  m365-surface-coverage.md  webhook-contract.md
scripts/: _common.py  a365_config.py  activity_bridge.py  blueprint_create.py  cleanup.py  consent.py  doctor.py  emit_card.py  hermes_responder.py  instance_create.py  keychain.py  license.py  mutator.py  publish.py  reconcile_app.py  reconcile_blueprint.py  register.py  render_instance_env.py  secrets.py  status.py  telemetry.py
src/hermes_a365/: __init__.py  activity_bridge.py  bot_service.py  bot_service_diagnostics.py  cleanup.py  doctor.py  instance_create.py  publish.py  register.py  render_instance_env.py  status.py
src/hermes_a365/_data/templates/: instance.env.j2
src/hermes_a365/plugin/: adapter.py
templates/: instance.env.j2
tests/: conftest.py  test_a365_config.py  test_activity_bridge.py  test_agent365_plugin.py  test_blueprint_create.py  test_bot_service.py  test_bot_service_diagnostics.py  test_cleanup.py  test_common.py  test_doctor.py  test_hermes_responder.py  test_instance_create.py  test_license.py  test_mutator.py  test_publish.py  test_register.py  test_render_instance_env.py  test_secrets.py  test_status.py  test_telemetry.py
tests/golden/instance_env/: minimal.env  with_business_hours.env
tests/golden/license/: addon_small_team.txt  e7_large_team.txt
