[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "hermes-a365"
version = "0.7.2"
description = "Integrate Hermes agents into the Microsoft 365 ecosystem using Microsoft Agent 365 (A365)."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Sadiq Jaffer", email = "sadiq.jaffer@satscryption.io"},
]
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/satscryption/Hermes-A365"
Issues = "https://github.com/satscryption/Hermes-A365/issues"
Documentation = "https://github.com/satscryption/Hermes-A365#readme"

[project.scripts]
hermes-a365 = "hermes_a365.cli:main"

# Auto-discovered by the Hermes plugin loader's entry-point scan
# (see ``hermes_cli/plugins.py`` — ``ENTRY_POINTS_GROUP =
# "hermes_agent.plugins"``). When this package is installed into the
# Hermes venv (``~/.hermes/hermes-agent/venv/bin/pip install hermes-a365``)
# the ``agent365`` adapter + ``hermes a365 <verb>`` CLI surface light up
# without operators having to drop anything in ``~/.hermes/plugins/``.
[project.entry-points."hermes_agent.plugins"]
agent365 = "hermes_a365.plugin"

[project.optional-dependencies]
# Slice 19b — `activity_bridge serve` mode pulls in a small webserver
# stack. Optional so operators who only run setup/cleanup wrappers can
# install with no extras.
bridge = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.8",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "ruff>=0.5",
  # Bridge stack is installed in dev too so tests can exercise it.
  "fastapi>=0.115",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.8",
  "uvicorn>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_a365"]

[tool.hatch.build.targets.sdist]
include = [
  "src/hermes_a365",
  "tests",
  "README.md",
  "SKILL.md",
  "CHANGELOG.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
